ultimos cambios alv

--- a/round02/reportes.html
+++ b/round02/reportes.html
@@ -35,7 +35,7 @@
                 <form class="col s12">
                     <h1 class=" center-align">REPORTES</h1>
                     <div class="row">
-                        <dixv class="col s12">
+                        <div class="col s12">
                             <ul id="tabs-swipe-reportes" class="tabs">
                                 <li class="tab col s4"><a href="#reportes-1">Sección 1</a></li>
                                 <li class="tab col s4"><a class="active" href="#reportes-2">Sección 2</a></li>
@@ -330,12 +330,12 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </div>
+                </form>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit ipsam quos inventore voluptates cupiditate voluptatibus impedit enim dolor dolores fugit autem debitis nesciunt, delectus unde possimus voluptate voluptatum magnam quaerat?
+                </p>
             </div>
-            </form>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit ipsam quos inventore voluptates cupiditate voluptatibus impedit enim dolor dolores fugit autem debitis nesciunt, delectus unde possimus voluptate voluptatum magnam quaerat?
-            </p>
-        </div>
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
