--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>LMS - Nuevos Negocios</h1>
     <ul>
-        <li><a href="round00/index.html">Round 0</a></li>
+        <!-- <li><a href="round00/index.html">Round 0</a></li> -->
         <li> <a href="round01/index.html">Round 1</a></li>
         <li> <a href="round02/index.html">Round 2</a></li>
     </ul>
