--- a/round02/index.html
+++ b/round02/index.html
@@ -17,9 +17,9 @@
 
     <div class="fila">
         <div class="bloque01 col hide-on-small-only" id="bloque01">
-            <!-- <video autoplay="autoplay" loop="loop" id="video_background" preload="auto" volume="50" />
+            <video autoplay="autoplay" loop="loop" id="video_background" preload="auto" volume="50" />
             <source src="img/video.mp4" type="video/mp4" />
-            </video /> -->
+            </video />
             <img src="img/logo.png" alt="">
             <h1>
                 <a href="" class="typewrite" data-period="2000" data-type='[ "Nuevos Negocios", "Loyalty Marketing Services" ]'>
