--- a/round01/index.html
+++ b/round01/index.html
@@ -18,7 +18,7 @@
         <main class="bloque02 col">
             <img src="img/logo.png" alt="">
             <h3>Nuevos negocios</h3>
-            <form>
+            <form id="form">
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
@@ -38,7 +38,15 @@
         </main>
         <div class="bloque01 col hide-on-small-only">
 
-            <img src="img/logo.png" alt="">
+            <!-- <img src="img/logo.png" alt=""> -->
+            <div class="clink">
+                <a class="intro-banner-vdo-play-btn pinkBg" target="_blank">
+                    <img src="img/logo.png" alt="">
+                    <span class="ripple pinkBg"></span>
+                    <span class="ripple azulBg"></span>
+                    <span class="ripple pinkBg"></span>
+                </a>
+            </div>
             <h1>
                 <a href="" class="typewrite" data-period="2000" data-type='[ "Nuevos Negocios", "Loyalty Marketing Services" ]'>
                     <span class="wrap"></span>
@@ -54,6 +62,49 @@
     <!--JavaScript at end of body for optimized loading -->
     <script type="text/javascript " src="js/materialize.js "></script>
     <script type="text/javascript " src="js/custom.js "></script>
+
+    <!-- load scripts after dom has been rendered -->
+    <script src="js/TweenLite.js"></script>
+    <script src="js/CSSPlugin.js"></script>
+    <script src="js/EasePack.js"></script>
+
+    <!-- add your own script -->
+    <script>
+        var form = document.getElementById("form");
+        /*  var bloque02 = document.getElementById("bloque02"); */
+
+
+
+        function myFunction(x) {
+            if (x.matches) { // If media query matches
+                document.body.style.width = " ";
+
+
+            } else {
+
+                TweenLite.to(form, 1, {
+                    top: '0%',
+                    backgroundColor: '#fbfbfb',
+                    delay: 0.5,
+                    opacity: 1,
+                    ease: Back.easeOut,
+                });
+
+                /* TweenLite.to(bloque02, 1, {
+                    rotation: 0,
+                    left: '0%',
+                    backgroundColor: '#dc4747',
+                    delay: 2,
+                    ease: Bounce.easeOut,
+                    rotation: 20,
+                }); */
+            }
+        }
+
+        var x = window.matchMedia("(max-width: 700px)")
+        myFunction(x) // Call listener function at run time
+        x.addListener(myFunction) // Attach listener function on state changes
+    </script>
 </body>
 
 </html>
